added Join now and router

--- a/client/templates/classes/class_item.html
+++ b/client/templates/classes/class_item.html
@@ -6,7 +6,10 @@
 		<div class="panel-body" style="min-height: 200px; max-height: 200px;">
 			<center><p>{{startTime}} - {{endTime}}</p></center>
 			<center><p>{{address}}</p></center>
-			<p>{{description}}</p>			
+			<p>{{description}}</p>
+		</div>
+		<div class="panel-footer">
+			<a href="{{pathFor 'classPage'}}" class="form-control btn btn-success">Join Class</a>
 		</div>
 	</div>
 </template>
