added buttons to panel

--- a/client/templates/classes/class_item.html
+++ b/client/templates/classes/class_item.html
@@ -9,7 +9,8 @@
 			<p>{{description}}</p>
 		</div>
 		<div class="panel-footer">
-			<a href="{{pathFor 'classPage'}}" class="form-control btn btn-success">Join Class</a>
+			<a href="{{pathFor 'classPage'}}" class="btn btn-success">Details</a>
+			<a href="{{pathFor 'classPage'}}" class="btn btn-primary">Join Class</a>
 		</div>
 	</div>
 </template>
