--- a/client/templates/classes/class_item.html
+++ b/client/templates/classes/class_item.html
@@ -10,7 +10,7 @@
 		</div>
 		<div class="panel-footer">
 			<a href="{{pathFor 'classPage'}}" class="btn btn-success">Details</a>
-			<a href="{{pathFor 'classPage'}}" class="btn btn-primary">Join Class</a>
+			<a href="{{pathFor 'classPage'}}" class="btn btn-primary pull-right">Join Class</a>
 		</div>
 	</div>
 </template>
