--- a/client/templates/classes/classes_list.html
+++ b/client/templates/classes/classes_list.html
@@ -2,7 +2,7 @@
 	<div class="classes">
 		<div class="row">
 			{{#each classes}}
-				<div class="col-md-4">
+				<div class="col-sm-12 col-md-6 col-lg-4">
 					{{> classItem}}
 				</div>
 			{{/each}}
