--- a/client/templates/application/layout.html
+++ b/client/templates/application/layout.html
@@ -1,8 +1,9 @@
 <template name="layout">
-	<div class="container">
+	<div class="container-fluid">
 		{{> header}}
-		<div id="main">
+		<div class="container" id="main">
 			{{> yield}}
 		</div>
+		{{> floatingutton}}
 	</div>
 </template>
