updated sign-in and other functions

--- a/client/templates/classes/class_item.html
+++ b/client/templates/classes/class_item.html
@@ -1,7 +1,7 @@
 <template name="classItem">
-	<div class="card">
+	<div class="card hoverable">
 		<div class="card-title activatir grey-text text-darken-4">
-			<center>{{title}} - <small>{{zipCode}}</small>  {{startDate}}-{{endDate}}</center>
+			<center>{{title}} - <small>{{zipCode}}{{startDate}}-{{endDate}}</small>  </center>
 		</div>
 		<div class="card-content" style="min-height: 200px; max-height: 200px;">
 			<center><p>{{startTime}} - {{endTime}}</p></center>
@@ -9,7 +9,7 @@
 			<p>{{description}}</p>
 		</div>
 		<div class="card-action">
-			<a href="{{pathFor 'classPage'}}" class="btn green">Join Class</a>
+			<center><a href="{{pathFor 'classPage'}}" class="waves-effect btn green white-text">Join Class <i class="large material-icons">play_arrow</i></a></center>
 		</div>
 	</div>
 </template>
