--- a/client/templates/includes/floating-button.html
+++ b/client/templates/includes/floating-button.html
@@ -1,7 +1,7 @@
 <template name="floatingutton">
-	<div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
+	<div class="fixed-action-btn" style="bottom: 20px; right: 20px;">
 	    <a class="btn-floating btn-large red">
-	      <i class="large material-icons">mode_edit</i>
+	      <i class="large material-icons">add</i>
 	    </a>
 	    <ul>
 	      <li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
