--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -8,10 +8,9 @@
           {{> atNavButton}}
         </ul>
         <ul class="side-nav" id="mobile-demo">
-          
+          <li>{{> atNavButton}}</li>
         </ul>
       </div>
     </nav>
   </div>
-  
 </template>
