added basic form

--- a/client/templates/application/not_found.html
+++ b/client/templates/application/not_found.html
@@ -1,5 +1,5 @@
 <template name="notFound">
-    <div class="not-found page jumbotron">
+    <div class="not-found page jumbotron valign-wrapper">
         <h2>Error 404</h2>
         <p>This is not the page you are looking for.....we're not even sure that page exists.</p>
     </div>
