--- a/client/templates/includes/floating-button.html
+++ b/client/templates/includes/floating-button.html
@@ -1,6 +1,6 @@
 <template name="floatingutton">
 	<div class="fixed-action-btn" style="bottom: 20px; right: 20px;">
-	    <a class="btn-floating btn-large red">
+	    <a class="btn-floating btn-large red" href="{{pathFor 'classSubmit'}}">
 	      <i class="large material-icons">add</i>
 	    </a>
 	    <ul>
