--- a/client/templates/classes/post_page.html
+++ b/client/templates/classes/post_page.html
@@ -1,5 +1,5 @@
-<template name="classPage">
+<template name="postPage">
     <div class="post-page page">
-        {{> classItem}}
+        {{> postItem}}
     </div>
 </template>
