--- a/client/templates/classes/posts_list.html
+++ b/client/templates/classes/posts_list.html
@@ -1,9 +1,9 @@
-<template name="classesList">
-	<div class="classes">
+<template name="postsList">
+	<div class="posts">
 		<div class="row">
-			{{#each classes}}
+			{{#each posts}}
 				<div class="col s12 m6 l4">
-					{{> classItem}}
+					{{> postItem}}
 				</div>
 			{{/each}}
 		</div>
