--- a/client/templates/includes/floating-button.html
+++ b/client/templates/includes/floating-button.html
@@ -1,6 +1,7 @@
 <template name="floatingutton">
+	{{#if currentUser}}
 	<div class="fixed-action-btn" style="bottom: 20px; right: 20px;">
-	    <a class="btn-floating btn-large red" href="{{pathFor 'classSubmit'}}">
+	    <a class="btn-floating btn-large red" href="{{pathFor 'postSubmit'}}">
 	      <i class="large material-icons">add</i>
 	    </a>
 	    <ul>
@@ -10,4 +11,5 @@
 	      <li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>
 	    </ul>
 	 </div>
+	 {{/if}}
 </template>
