--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -1,13 +1,13 @@
 <template name="header">
   <div class="navbar-fixed">
     <nav>
-      <div class="nav-wrapper blue">
+      <div class="nav-wrapper blue darken-1 z-depth-1">
         <a href="/" class="brand-logo">Class</a>
-        <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+        <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
-          {{> atNavButton}}
+          <li>{{> atNavButton}}</li>
         </ul>
-        <ul class="side-nav" id="mobile-demo">
+        <ul class="side-nav" id="slide-out">
           <li>{{> atNavButton}}</li>
         </ul>
       </div>
