--- a/client/templates/includes/floating-button.html
+++ b/client/templates/includes/floating-button.html
@@ -1,14 +1,11 @@
 <template name="floatingutton">
 	{{#if currentUser}}
 	<div class="fixed-action-btn" style="bottom: 20px; right: 20px;">
-	    <a class="btn-floating btn-large red" href="{{pathFor 'postSubmit'}}">
+	    <a class="btn-floating btn-large red">
 	      <i class="large material-icons">add</i>
 	    </a>
 	    <ul>
-	      <li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
-	      <li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>
-	      <li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>
-	      <li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>
+	      <li><a class="btn-floating orange" href="{{pathFor 'postSubmit'}}"><i class="material-icons">schedule</i></a></li>
 	    </ul>
 	 </div>
 	 {{/if}}
