changed layout, corrected 404 error

--- a/client/templates/includes/floating-button.html
+++ b/client/templates/includes/floating-button.html
@@ -1,7 +1,7 @@
 <template name="floatingutton">
 	{{#if currentUser}}
 	<div class="fixed-action-btn" style="bottom: 20px; right: 20px;">
-	    <a class="btn-floating btn-large red">
+	    <a class="btn-floating btn-large green">
 	      <i class="large material-icons">add</i>
 	    </a>
 	    <ul>
