--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -4,13 +4,22 @@
       <div class="nav-wrapper blue darken-1 z-depth-1">
         <a href="/" class="brand-logo">Class</a>
         <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
+        <ul class="hide-on-med-and-down">
+          
+        </ul>
         <ul class="right hide-on-med-and-down">
+          <li>{{> searchbar}}</li>
           <li>{{> atNavButton}}</li>
         </ul>
         <ul class="side-nav" id="slide-out">
           <li>{{> atNavButton}}</li>
+          <li>{{> searchbar}}</li>
         </ul>
       </div>
     </nav>
   </div>
+</template>
+
+<template name="atNavButtonMat">
+   <a id="at-nav-button">{{text}}</a>
 </template>
