--- a/client/templates/posts/post_edit.html
+++ b/client/templates/posts/post_edit.html
@@ -3,7 +3,7 @@
         <div class="col m10 offset-m1">
             <div class="card">
                 <div class="card-title grey-text text-darken-4 center">
-                    Open A New Class
+                    Edit Your Class 
                 </div>
                 <div class="card-content">
                     <form>
@@ -69,7 +69,7 @@
                         </div>
                         <div class="row">
                             <input type="submit" value="Submit" class="btn">
-                            <a class="btn red delete">Delete</a>
+                            <a class="right btn red delete">Delete</a>
                         </div>
                     </form>
                 </div>
