--- a/client/templates/posts/post_item.html
+++ b/client/templates/posts/post_item.html
@@ -5,14 +5,15 @@
 		<div class="card-content" style="min-height: 150px; max-height: 150px;">
 			<center>{{startTime}} - {{endTime}}</center>
 			<p></p>
-			<p></p>
-			<p></p>
+			<p>{{address1}}</p>
+			<p>{{address2}}</p>
+			<p>{{city}}, {{state}} {{zipcode}}</p>
 			<p>{{description}}</p>
 			<p>-{{author}}</p>
 		</div>
 		<div class="card-action">
 			<a href="{{pathFor 'postPage'}}" class="waves-effect btn white-text">Join Class</a>
-			{{#if ownPost}}<a href="{{pathFor 'postEdit'}}">Edit</a>{{/if}}
+			{{#if ownPost}}<a href="{{pathFor 'postEdit'}}" class="right waves-effect btn orange white-text">Edit</a>{{/if}}
 		</div>
 	</div>
 </template>
