--- a/client/templates/posts/post_submit.html
+++ b/client/templates/posts/post_submit.html
@@ -63,7 +63,7 @@
                         </div>
                         <div class="row">
                             <div class="input-field col s12">
-                                  <textarea name="description" id="description" class="materialize-textarea"></textarea>
+                                  <textarea name="description" id="description" type="text" class="materialize-textarea"></textarea>
                                   <label for="description">Description</label>
                             </div>
                         </div>
