changed card layout

--- a/client/templates/posts/posts_list.html
+++ b/client/templates/posts/posts_list.html
@@ -3,7 +3,9 @@
 		<div class="row">
 			{{#each posts}}
 				<div class="col s12 m6 l4">
-					{{> postItem}}
+				  <div class="card hoverable">
+  					{{> postItem}}
+					</div>
 				</div>
 			{{/each}}
 		</div>
