--- a/client/templates/posts/post_item.html
+++ b/client/templates/posts/post_item.html
@@ -1,19 +1,25 @@
 <template name="postItem">
-	<div class="card hoverable">
 		<div class="card-title activator grey-text text-darken-4 center" style="min-height: 50px; max-height: 50px;">
-			{{title}} - <small>{{city}}</small></div>
+			{{title}}
+			<i class="material-icons right">more_vert</i>
+			</div>
 		<div class="card-content" style="min-height: 150px; max-height: 150px;">
+			<div>
+				{{city}}
+			</div>
+			<center>{{startDate}} - {{endDate}}</center>
+			<right>{{author}}</right>
+		</div>
+		<div class="card-reveal">
+			<span class="card-title grey-text text-darken-4">{{title}}<i class="material-icons right">close</i></span>
 			<center>{{startTime}} - {{endTime}}</center>
-			<p></p>
 			<p>{{address1}}</p>
 			<p>{{address2}}</p>
 			<p>{{city}}, {{state}} {{zipcode}}</p>
 			<p>{{description}}</p>
-			<p>-{{author}}</p>
 		</div>
 		<div class="card-action">
 			<a href="{{pathFor 'postPage'}}" class="waves-effect btn white-text">Join Class</a>
 			{{#if ownPost}}<a href="{{pathFor 'postEdit'}}" class="right waves-effect btn orange white-text">Edit</a>{{/if}}
 		</div>
-	</div>
 </template>
