reroute glitch again

--- a/client/templates/posts/post_item.html
+++ b/client/templates/posts/post_item.html
@@ -12,6 +12,7 @@
 		</div>
 		<div class="card-reveal">
 			<span class="card-title grey-text text-darken-4">{{title}}<i class="material-icons right">close</i></span>
+			<p>submitted by {{author}}</p>
 			<center>{{startTime}} - {{endTime}}</center>
 			<p>{{address1}}</p>
 			<p>{{address2}}</p>
