working on toast

--- a/client/templates/application/layout.html
+++ b/client/templates/application/layout.html
@@ -1,6 +1,7 @@
 <template name="layout">
 	<div class="container-fluid">
 		{{> header}}
+		{{> errors}}
 		<div class="container" id="main">
 			{{> yield}}
 		</div>
