--- a/client/templates/posts/posts_list.html
+++ b/client/templates/posts/posts_list.html
@@ -1,5 +1,8 @@
 <template name="postsList">
 	<div class="posts">
+	  
+  <a class="btn" onclick="Materialize.toast('I am a toast', 4000)">Toast!</a>
+        
 		<div class="row">
 			{{#each posts}}
 				<div class="col s12 m6 l4">
