--- a/client/templates/includes/errors.html
+++ b/client/templates/includes/errors.html
@@ -1,14 +1,9 @@
 <template name="errors">
-  <div class="errors">
-    {{#each errors}}
-      {{> error}}
-    {{/each}}
-  </div>
+    {{message}}
 </template>
 
-<template name="error">
-  <div class="alert alert-danger" role="alert">
-    <button type="button" class="close" data-dismiss="alert">&times;</button>
-    {{message}}
-  </div>
-</template>
+<!--<template name="error">-->
+<!--  <div class="alert alert-danger" role="alert">-->
+<!--    {{message}}-->
+<!--  </div>-->
+<!--</template>-->
