--- a/client/templates/posts/post_edit.html
+++ b/client/templates/posts/post_edit.html
@@ -1,4 +1,5 @@
 <template name="postEdit">
+    <!--{{> quickForm collection="Posts" id="insertPostForm" type="update"}}-->
     <div class="row">
         <div class="col m10 offset-m1">
             <div class="card">
