--- a/client/templates/posts/post_submit.html
+++ b/client/templates/posts/post_submit.html
@@ -1,4 +1,6 @@
 <template name="postSubmit">
+  
+  <!--{{> quickForm collection="Posts" id="insertPostForm" type="insert"}}-->
     <div class="row">
         <div class="col m10 offset-m1">
             <div class="card">
