--- a/client/templates/posts/post_submit.html
+++ b/client/templates/posts/post_submit.html
@@ -11,8 +11,8 @@
                     <form>
                         <div class="row">
                             <div class="input-field col s12">
-                                <label for="title">Title</label>
-                                <input name="title" id="title" type="text" value=""/>
+                                <label for="title" data-error="wrong">Title</label>
+                                <input name="title" id="title" type="text" class="validate">
                             </div>
                         </div>
                         <div class="row">
@@ -59,7 +59,7 @@
                         </div>
                         <div class="row">
                             <div class="input-field col s12">
-                                <label for="price">Price</label>
+                                <label for="price" >Price</label>
                                 <input name="price" id="price" type="text" value=""/>
                             </div>
                         </div>
