--- a/client/templates/posts/post_page.html
+++ b/client/templates/posts/post_page.html
@@ -4,5 +4,15 @@
     		<div class="card">
         	{{> postItem}}
         </div>
+        <ul class="collection">
+	        {{#each comments}}
+	        	{{> commentItem}}
+	        {{/each}}
+        </ul>
+          {{#if currentUser}}
+          	{{> commentSubmit}}
+          {{else}}
+          	<p>Please log in to leave a comment.</p>
+          {{/if}}
     </div>
 </template>
