--- a/client/templates/posts/posts_list.html
+++ b/client/templates/posts/posts_list.html
@@ -3,7 +3,7 @@
 		<div class="row">
 			{{#each posts}}
 				<div class="col s12 m6 l4">
-				  <div class="card small hoverable">
+				  <div class="card medium hoverable">
   					{{> postItem}}
 					</div>
 				</div>
