--- a/client/templates/comments/comment_submit.html
+++ b/client/templates/comments/comment_submit.html
@@ -1,12 +1,12 @@
 <template name="commentSubmit">
   <form name="comment" class="comment-form form">
-    <div class="form-group {{errorClass 'body'}}">
-        <div class="controls">
-            <label for="body">Comment on this post</label>
-            <textarea name="body" id="body" class="form-control" rows="3"></textarea>
-            <span class="help-block">{{errorMessage 'body'}}</span>
+    <div class="collection">
+        <div class="collection-item">
+            <label for="body" class="grey-text text-darken-4">Comment on this post</label>
+            <textarea name="body" id="body" class="materialize-textarea validate" rows="3"></textarea>
+            <span class="">{{errorMessage 'body'}}</span>
         </div>
     </div>
-    <button type="submit" class="btn btn-primary">Add Comment</button>
+    <button type="submit" class="btn btn-primary right">Add Comment</button>
   </form>
 </template>
