load more added and subscriptions corrected

--- a/client/templates/includes/floating-button.html
+++ b/client/templates/includes/floating-button.html
@@ -1,4 +1,4 @@
-<template name="floatingutton">
+<template name="floatinbutton">
 	{{#if currentUser}}
 	<div class="fixed-action-btn" style="bottom: 20px; right: 20px;">
 	    <a class="btn-floating btn-large green">
