--- a/client/templates/posts/posts_list.html
+++ b/client/templates/posts/posts_list.html
@@ -9,5 +9,15 @@
 				</div>
 			{{/each}}
 		</div>
+		<div class='row'>
+      {{#if nextPath}}
+        <div class="card blue-grey darken-1">
+            <span class="card-title"><center><a class="white-text" href="{{nextPath}}">Load More</a></center></span>
+        </div>
+      {{/if}}
+      {{#unless ready}}
+        {{> loading}}
+      {{/unless}}
+		</div>
 	</div>
 </template>
