corrected user accounts

--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -11,10 +11,10 @@
         </ul>
         <ul class="right hide-on-med-and-down">
           <li>{{> searchbar}}</li>
-          <li>{{> atNavButton}}</li>
+          <li>{{> loginButtons align="right"}}</li>
         </ul>
         <ul class="side-nav" id="slide-out">
-          <li>{{> atNavButton}}</li>
+          <li>{{> loginButtons}}</li>
           <li>{{> searchbar}}</li>
           <!--          {{#if currentUser}}-->
           <!--<li>{{> notifications}}</li>-->
