--- a/client/templates/posts/post_item.html
+++ b/client/templates/posts/post_item.html
@@ -1,11 +1,8 @@
 <template name="postItem">
 		<div class="card-title  grey-text text-darken-4 center">
-			{{title}} <small>{{city}}</small>
-			</div>
+	    {{title}} <small>{{city}}</small>
+		</div>
 		<div class="card-content">
-			<div>
-				
-			</div>
 			<div>{{startDate}} - {{endDate}}</div>
 			<div>{{startTime}} - {{endTime}}</div>
 			<div>instructed by {{author}}</div>
@@ -13,10 +10,12 @@
 			<p>{{address1}}</p>
 			<p>{{address2}}</p>
 			<p>{{city}}, {{state}} {{zipcode}}</p>
-			
+		</div>
+		<div class="card-content">
+			<div class="left">{{commentsCount}} comments</div>
+			<!--<div class="right">{{votes}} Stars</div>-->
 		</div>
 		<div class="card-action">
-			<div>{{commentsCount}} comments</div>
 			<a href="{{pathFor 'postPage'}}" class="waves-effect btn white-text">Join Class</a>
 			{{#if ownPost}}<a href="{{pathFor 'postEdit'}}" class="right ">Edit</a>{{/if}}
 		</div>
