--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -3,7 +3,7 @@
     <nav>
       <div class="nav-wrapper blue darken-1 z-depth-1">
         <a href="/" class="brand-logo">Class</a>
-        <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
+        <a data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
         <ul class="right">
           {{#if currentUser}}
           <li>{{> notifications}}</li>
@@ -16,7 +16,7 @@
         <ul class="side-nav" id="slide-out">
           <li>{{> loginButtons}}</li>
           <li>{{> searchbar}}</li>
-          <!--          {{#if currentUser}}-->
+          <!--{{#if currentUser}}-->
           <!--<li>{{> notifications}}</li>-->
           <!--{{/if}}-->
         </ul>
