--- a/client/templates/posts/post_form.html
+++ b/client/templates/posts/post_form.html
@@ -77,7 +77,7 @@
       </li>
     </ul>
   <div class="row">
-    <center><input type="submit" value="Submit" class="btn">{{#if ownPost}}<a class="right btn red delete">Delete</a>{{/if}}</center>
+    <center><input type="submit" value="Submit" class="btn">{{#if ownPost}}<a class="btn red delete">Delete</a>{{/if}}</center>
   </div>
 </form>
 </template>
