--- a/client/templates/includes/searchbar.html
+++ b/client/templates/includes/searchbar.html
@@ -1,12 +1,8 @@
 <template name="searchbar">
-  <!--<nav>-->
-    <!--<div class="nav-wrapper">-->
-      <form>
-        <div class="input-field">
-          <input id="search" type="search">
-          <label for="search"><i class="material-icons">search</i></label>
-        </div>
-      </form>
-    <!--</div>-->
-  <!--</nav>-->
+  <form>
+    <div class="input-field">
+      {{> esInput index="posts"}}
+      <label for="search"><i class="material-icons">search</i></label>
+    </div>
+  </form>
 </template>
