--- a/client/templates/posts/posts_list.html
+++ b/client/templates/posts/posts_list.html
@@ -1,23 +1,52 @@
 <template name="postsList">
-	<div class="posts">
-		<div class="row">
-			{{#each posts}}
-				<div class="col s12 m6 l4">
+  <div class="row">
+    {{#ifEsInputIsEmpty index="posts"}}
+      {{> landing}}
+    {{/ifEsInputIsEmpty}}
+  </div>
+
+  <div class="row">
+      {{#esEach index="posts"}}
+        <div class="col s12 m6 l4">
 				  <div class="card small hoverable">
   					{{> postItem}}
 					</div>
 				</div>
-			{{/each}}
-		</div>
-		<div class='row'>
-      {{#if nextPath}}
-        <div class="card grey lighten-1 z-depth-0">
-            <span class="card-title"><center><a class="white-text" href="{{nextPath}}">Load More</a></center></span>
-        </div>
-      {{/if}}
-      {{#unless ready}}
-        {{> loading}}
-      {{/unless}}
-		</div>
-	</div>
+      {{/esEach}}
+  </div>
+  <div class="row">
+    {{> esLoadMoreButton index="posts"}}
+  </div>
+  
+
+  {{#ifEsHasNoResults index="posts"}}
+      <div class="no-results">No results found!</div>
+  {{/ifEsHasNoResults}}
+
+  {{#ifEsIsSearching index="posts"}}
+          <div>{{> loading}}</div>
+  {{/ifEsIsSearching}}
+
+
+	<!--<div class="posts">-->
+	<!--	<div class="row">-->
+	<!--		{{#each posts}}-->
+	<!--			<div class="col s12 m6 l4">-->
+	<!--			  <div class="card small hoverable">-->
+ <!-- 					{{> postItem}}-->
+	<!--				</div>-->
+	<!--			</div>-->
+	<!--		{{/each}}-->
+	<!--	</div>-->
+	<!--	<div class='row'>-->
+ <!--     {{#if nextPath}}-->
+ <!--       <div class="card grey lighten-1 z-depth-0">-->
+ <!--           <span class="card-title"><center><a class="white-text" href="{{nextPath}}">Load More</a></center></span>-->
+ <!--       </div>-->
+ <!--     {{/if}}-->
+ <!--     {{#unless ready}}-->
+ <!--       {{> loading}}-->
+ <!--     {{/unless}}-->
+	<!--	</div>-->
+	<!--</div>-->
 </template>
