updated landing and loggedin pages

--- a/client/templates/includes/landing.html
+++ b/client/templates/includes/landing.html
@@ -1,5 +1,13 @@
 <template name="landing">
+  {{#if currentUser}}
   <div class="row">
-    <h1 class="center-align">Landing Page</h1>
+    <h1 class="center-align">
+      Welcome back!
+    </h1>
   </div>
+  {{else}}
+    <div class="row">
+      <h1 class="center-align">Landing Page</h1>
+    </div>
+  {{/if}}
 </template>
