--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -3,18 +3,17 @@
     <nav>
       <div class="nav-wrapper blue darken-1 z-depth-1">
         <a href="/" class="brand-logo">Class</a>
-        <a data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
+        <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
         <ul class="right">
+          <li>{{> loginButtons align="right"}}</li>
           {{#if currentUser}}
-          <li>{{> notifications}}</li>
+            <li>{{> notifications}}</li>
           {{/if}}
         </ul>
         <ul class="right hide-on-med-and-down">
           <li>{{> searchbar}}</li>
-          <li>{{> loginButtons align="right"}}</li>
         </ul>
         <ul class="side-nav" id="slide-out">
-          <li>{{> loginButtons}}</li>
           <li>{{> searchbar}}</li>
           <!--{{#if currentUser}}-->
           <!--<li>{{> notifications}}</li>-->
