updated landing page add footer

--- a/client/templates/posts/post_list_item.html
+++ b/client/templates/posts/post_list_item.html
@@ -1,3 +1,4 @@
 <template name="postListItem">
-  <li class="collection-item"><h5><a href="{{pathFor 'postPage'}}">{{title}}</a></h5>{{city}}</li>
+  <li class="collection-item"><h5><a href="{{pathFor 'postPage'}}">{{title}}</a></h5>{{city}}
+  </li>
 </template>
