--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -1,17 +1,14 @@
 <template name="header">
   <div class="navbar-fixed">
     <nav>
-      <div class="nav-wrapper blue darken-1 z-depth-1">
-        <a href="/" class="brand-logo">Class</a>
-        <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
+      <div class="nav-wrapper teal darken-3 z-depth-1">
+        <a href="/" class="brand-logo center">Class</a>
+        <a href="#" data-activates="slide-out" class="button-collapse show-on-large"><i class="material-icons">menu</i></a>
         <ul class="right">
           <li>{{> loginButtons align="right"}}</li>
           {{#if currentUser}}
             <li>{{> notifications}}</li>
           {{/if}}
-        </ul>
-        <ul class="right hide-on-med-and-down">
-          <li>{{> searchbar}}</li>
         </ul>
         <ul class="side-nav" id="slide-out">
           <li>{{> searchbar}}</li>
