--- a/client/templates/includes/floating-button.html
+++ b/client/templates/includes/floating-button.html
@@ -1,11 +1,11 @@
 <template name="floatinbutton">
 	{{#if currentUser}}
 	<div class="fixed-action-btn" style="bottom: 20px; right: 20px;">
-	    <a class="btn-floating btn-large green">
+	    <a class="btn-floating btn-large organge">
 	      <i class="large material-icons">add</i>
 	    </a>
 	    <ul>
-	      <li><a class="btn-floating orange" href="{{pathFor 'postSubmit'}}"><i class="material-icons">schedule</i></a></li>
+	      <li><a class="btn-floating blue" href="{{pathFor 'postSubmit'}}"><i class="material-icons">schedule</i></a></li>
 	    </ul>
 	 </div>
 	 {{/if}}
