--- a/client/templates/includes/landing/landing-out.html
+++ b/client/templates/includes/landing/landing-out.html
@@ -3,7 +3,7 @@
     <div class="slider">
       <ul class="slides">
         <li>
-          <img class="responsive-img" src="https://images.unsplash.com/photo-1431578500526-4d9613015464?q=80&fm=jpg&s=169b4f4e6f3882a03b6b93b2e6848052">
+          <img class="responsive-img" src="/images/photo-1431578500526-4d9613015464.jpg">
           <div class="caption center-align">
             <h3>WELCOME TO YOUR CLASS</h3>
             <h5 class="light grey-text text-lighten-3">Find out what you can learn</h5>
@@ -13,31 +13,54 @@
     </div>
   </div>
   <div class="row">
+    <div class="center-align">
+      <h4>Find local experts who can teach you something</h4>
+      <h5>Discover your new passion</h5>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col s4">
+      <div class="card">
+        <div class="card-image waves-effect waves-block waves-light">
+          <img class="activator" src="images/office.jpg">
+        </div>
+        <div class="card-content">
+          <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
+          <p><a href="#">This is a link</a></p>
+        </div>
+        <div class="card-reveal">
+          <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+          <p>Here is some more information about this product that is only revealed once clicked on.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
     <div class="slider">
       <ul class="slides">
         <li>
-          <img class="responsive-img" src="https://images.unsplash.com/photo-1438029071396-1e831a7fa6d8?q=80&fm=jpg&s=f9871beffe0d05c626a91cb5dce35a81">
+          <img class="responsive-img" src="/images/download4.jpeg">
           <div class="caption left-align">
             <h3>LEARN WHAT YOU WANT</h3>
             <h5 class="light grey-text text-lighten-3">From an expert in the field</h5>
           </div>
         </li>
         <li>
-          <img class="responsive-img" src="https://images.unsplash.com/photo-1436831135709-48bdc150cce5?q=80&fm=jpg&s=3e7350350dd27f7d9b67256fd90073f5">
+          <img class="responsive-img" src="/images/download5.jpeg">
           <div class="caption left-align">
             <h3>PICK UP A NEW SKILL OR HOBBY</h3>
             <h5 class="light grey-text text-lighten-3">Develop skills that improve your life</h5>
           </div>
         </li>
         <li>
-          <img class="responsive-img" src="https://images.unsplash.com/photo-1436564989038-18b9958df72b?q=80&fm=jpg&s=63f82ffb3fa7effd45c79e0379dbdee6">
+          <img class="responsive-img" src="/images/download6.jpeg">
           <div class="caption left-align">
             <h3>KNOWLEDGE ON DEMAND</h3>
             <h5 class="light grey-text text-lighten-3">Learn around your schedule</h5>
           </div>
         </li>
         <li>
-          <img class="responsive-img" src="https://images.unsplash.com/photo-1438109491414-7198515b166b?q=80&fm=jpg&s=cbdabf7a79c087a0b060670a6d79726c">
+          <img class="responsive-img" src="/images/download3.jpeg">
           <div class="caption left-align">
             <h3>IT'S NEVER TOO LATE OR EARLY</h3>
             <h5 class="light grey-text text-lighten-3">Classes for everyone at any skill level at any age</h5>
