removed accounts-ui

--- a/client/templates/application/layout.html
+++ b/client/templates/application/layout.html
@@ -2,10 +2,11 @@
 	<div class="container-fluid">
 		{{> header}}
 		{{> errors}}
-		<div class="container" id="main">
+		<div class="container-fluid" id="main">
 			{{> yield}}
 		</div>
 		{{> floatinbutton}}
+		{{> footer}}
 	</div>
-	{{> footer}}
+
 </template>
