changed login and landing pages

--- a/client/templates/includes/landing/landing.html
+++ b/client/templates/includes/landing/landing.html
@@ -1,10 +1,6 @@
 <template name="landing">
   {{#if currentUser}}
-  <div class="row">
-    <h1 class="center-align">
-      Welcome back!
-    </h1>
-  </div>
+    {{> landingIn}}
   {{else}}
     {{> landingOut}}
   {{/if}}
