--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -5,9 +5,11 @@
         <a href="/" class="brand-logo center">Class</a>
         <a href="#" data-activates="slide-out" class="button-collapse show-on-large"><i class="material-icons">menu</i></a>
         <ul class="right">
-          <li></li>
+          <li>{{> signInButton}}</li>
           {{#if currentUser}}
             <li>{{> notifications}}</li>
+          {{else}}
+            <li>{{> signUpButton}}</li>
           {{/if}}
         </ul>
         <ul class="side-nav" id="slide-out">
