--- a/client/templates/includes/landing/landing-out.html
+++ b/client/templates/includes/landing/landing-out.html
@@ -44,15 +44,19 @@
           <div class="caption left-align">
             <h3>LEARN WHAT YOU WANT</h3>
             <h5 class="light grey-text text-lighten-3">From an expert in the field</h5>
-            <a href="#" class="btn-flat amber darken-4">Sign-Up</a>
+              <div class="btn amber darken-3">
+                <span class="white-text">{{> signUpButton}}</span>
+              </div>
           </div>
         </li>
         <li>
           <img class="responsive-img" src="/images/download5.jpeg">
           <div class="caption left-align">
-            <h3>PICK UP A NEW SKILL OR HOBBY</h3>
-            <h5 class="light grey-text text-darken-3">Develop skills that improve your life</h5>
-            <a href="#" class="btn-flat amber darken-4">Sign-Up</a>
+            <h3 class="grey-text text-text-darken-5">PICK UP A NEW SKILL OR HOBBY</h3>
+            <h5 class="light grey-text text-darken-5">Develop skills that improve your life</h5>
+              <div class="btn amber darken-3">
+                <span class="white-text">{{> signUpButton}}</span>
+              </div>
           </div>
         </li>
         <li>
@@ -60,7 +64,9 @@
           <div class="caption left-align">
             <h3>KNOWLEDGE ON DEMAND</h3>
             <h5 class="light grey-text text-lighten-3">Learn around your schedule</h5>
-            <a href="#" class="btn-flat amber darken-4">Sign-Up</a>
+              <div class="btn amber darken-3">
+                <span class="white-text">{{> signUpButton}}</span>
+              </div>
           </div>
         </li>
         <li>
@@ -68,7 +74,9 @@
           <div class="caption left-align">
             <h3>IT'S NEVER TOO LATE OR EARLY</h3>
             <h5 class="light grey-text text-lighten-3">Classes for everyone at any skill level at any age</h5>
-            <a href="#" class="btn-flat amber darken-4">Sign-Up</a>
+              <div class="btn amber darken-3">
+                <span class="white-text">{{> signUpButton}}</span>
+              </div>
           </div>
         </li>
       </ul>
@@ -84,7 +92,9 @@
         <p>
           We have classes for everyone! From teens learning to code to new home owners wanting to fix their toilets. Learning should never stop, so we have classes for every age group, every learning style every type of class you can think of.
         </p>
-        <a href="#" class="btn-flat amber darken-4">Sign-Up</a>
+          <div class="btn amber darken-3">
+            <span class="white-text">{{> signUpButton}}</span>
+          </div>
       </div>
        <div class="col m6">
         <h4 class="center-align">Teach Something</h4>
@@ -99,7 +109,9 @@
           If you are a plumber or an electrician you can easily get more clients by teaching people how to do simple work around the house. Teach someone to fish, they will come back to you because you know how fish better than them.
         </p>
         <div class="right-align">
-          <a href="#" class="btn-flat amber darken-4">Sign-Up</a>
+          <div class="btn amber darken-3">
+            <span class="white-text">{{> signUpButton}}</span>
+          </div>
         </div>
       </div>
     </div>
