--- a/client/templates/includes/signup/signupbtn.html
+++ b/client/templates/includes/signup/signupbtn.html
@@ -1,6 +1,6 @@
 <template name="signUpButton">
   <!-- Modal Trigger -->
-  <a class="modal-trigger waves-effect waves-light" href="#signup">Sign Up</a>
+  <a class="modal-trigger" href="#signup">Sign Up</a>
 </template>
 
 <template name="signInButton">
