--- a/client/templates/posts/post_form.html
+++ b/client/templates/posts/post_form.html
@@ -1,4 +1,5 @@
 <template name="postForm">
+  <div class="container">
    <form>
     <ul class="collapsible popout" data-collapsible="accordion">
       <li>
@@ -19,7 +20,12 @@
                   <textarea name="description" id="description" type="text" class="materialize-textarea"></textarea>
                   <label for="description">Description</label>
               </div>
-
+            </div>
+            <div class="row">
+              <div class="input-field col s12">
+                <input name="url" id="url" type="text"/>
+                <label for="url">Website</label>
+              </div>
             </div>
           </div>
       </li>
@@ -36,37 +42,89 @@
                   <input name="endDate" id="endDate" type="text" class="datepicker"/>
               </div>
           </div>
-          <div class="row">
-            <div class="input-field col s6">
-                <label for="startTime">Start Time</label>
-                <input name="startTime" id="startTime" type="text" class="pick-a-time"/>
-            </div>
-            <div class="input-field col s6">
-                <label for="endTime">End Time</label>
-                <input name="endTime" id="endTime" type="text" class="pick-a-time"/>
-            </div>
-          </div>
+          <!--<div class="row">-->
+          <!--  <div class="input-field col s6">-->
+          <!--      <label for="startTime">Start Time</label>-->
+          <!--      <input name="startTime" id="startTime" type="text" class="pick-a-time"/>-->
+          <!--  </div>-->
+          <!--  <div class="input-field col s6">-->
+          <!--      <label for="endTime">End Time</label>-->
+          <!--      <input name="endTime" id="endTime" type="text" class="pick-a-time"/>-->
+          <!--  </div>-->
+          <!--</div>-->
         </div>
       </li>
       <li>
         <div class="collapsible-header"><i class="material-icons">place</i>Location</div>
         <div class="collapsible-body">
           <div class="row">
-            <div class="input-field col s12">
-                <label for="address1">Address 1</label>
-                <input name="address1" id="address1" type="text" value=""/>
-            </div>
-            <div class="input-field col s12">
-                <label for="address2">Address 2</label>
-                <input name="address2" id="address1" type="text" value=""/>
-            </div>
+            <!--<div class="input-field col s12">-->
+            <!--    <label for="address1">Address 1</label>-->
+            <!--    <input name="address1" id="address1" type="text" value=""/>-->
+            <!--</div>-->
+            <!--<div class="input-field col s12">-->
+            <!--    <label for="address2">Address 2</label>-->
+            <!--    <input name="address2" id="address1" type="text" value=""/>-->
+            <!--</div>-->
             <div class="input-field col s5">
                 <label for="city">City</label>
                 <input name="city" id="city" type="text" value=""/>
             </div>
             <div class="input-field col s3">
-                <label for="state">State</label>
-                <input name="state" id="state" type="text" value=""/>
+              <label for="state">State</label>
+              <select name="state" id="state" type="text">
+              	<option value="AL">Alabama</option>
+              	<option value="AK">Alaska</option>
+              	<option value="AZ">Arizona</option>
+              	<option value="AR">Arkansas</option>
+              	<option value="CA">California</option>
+              	<option value="CO">Colorado</option>
+              	<option value="CT">Connecticut</option>
+              	<option value="DE">Delaware</option>
+              	<option value="DC">District Of Columbia</option>
+              	<option value="FL">Florida</option>
+              	<option value="GA">Georgia</option>
+              	<option value="HI">Hawaii</option>
+              	<option value="ID">Idaho</option>
+              	<option value="IL">Illinois</option>
+              	<option value="IN">Indiana</option>
+              	<option value="IA">Iowa</option>
+              	<option value="KS">Kansas</option>
+              	<option value="KY">Kentucky</option>
+              	<option value="LA">Louisiana</option>
+              	<option value="ME">Maine</option>
+              	<option value="MD">Maryland</option>
+              	<option value="MA">Massachusetts</option>
+              	<option value="MI">Michigan</option>
+              	<option value="MN">Minnesota</option>
+              	<option value="MS">Mississippi</option>
+              	<option value="MO">Missouri</option>
+              	<option value="MT">Montana</option>
+              	<option value="NE">Nebraska</option>
+              	<option value="NV">Nevada</option>
+              	<option value="NH">New Hampshire</option>
+              	<option value="NJ">New Jersey</option>
+              	<option value="NM">New Mexico</option>
+              	<option value="NY">New York</option>
+              	<option value="NC">North Carolina</option>
+              	<option value="ND">North Dakota</option>
+              	<option value="OH">Ohio</option>
+              	<option value="OK">Oklahoma</option>
+              	<option value="OR">Oregon</option>
+              	<option value="PA">Pennsylvania</option>
+              	<option value="RI">Rhode Island</option>
+              	<option value="SC">South Carolina</option>
+              	<option value="SD">South Dakota</option>
+              	<option value="TN">Tennessee</option>
+              	<option value="TX">Texas</option>
+              	<option value="UT">Utah</option>
+              	<option value="VT">Vermont</option>
+              	<option value="VA">Virginia</option>
+              	<option value="WA">Washington</option>
+              	<option value="WV">West Virginia</option>
+              	<option value="WI">Wisconsin</option>
+              	<option value="WY">Wyoming</option>
+              </select>	
             </div>
             <div class="input-field col s4">
                 <label for="zip">Zip Code</label>
@@ -76,10 +134,11 @@
         </div>
       </li>
     </ul>
-  <div class="row">
-    <center><input type="submit" value="Submit" class="btn">{{#if ownPost}}<a class="btn red delete">Delete</a>{{/if}}</center>
-  </div>
-</form>
+    <div class="row">
+      <center><input type="submit" value="Submit" class="btn">{{#if ownPost}}<a class="btn red delete">Delete</a>{{/if}}</center>
+    </div>
+  </form>
+</div>
 </template>
 
 <!--<form>-->
