--- a/client/templates/posts/post_page.html
+++ b/client/templates/posts/post_page.html
@@ -1,6 +1,6 @@
 <template name="postPage">
 
-    <div class="post-page page">
+    <div class="container">
     		<div class="card">
         	{{> postItem}}
         </div>
