--- a/client/templates/includes/signup/signupbtn.html
+++ b/client/templates/includes/signup/signupbtn.html
@@ -1,4 +1,10 @@
 <template name="signUpButton">
+  <div class="btn amber darken-3 waves-effect waves-light">
+    <a class="modal-trigger" href="#signup">Sign Up</a>
+  </div>
+</template>
+
+<template name="navSignUp">
   <!-- Modal Trigger -->
   <a class="modal-trigger" href="#signup">Sign Up</a>
 </template>
