--- a/client/templates/includes/modals.html
+++ b/client/templates/includes/modals.html
@@ -1,7 +1,8 @@
 <template name="modals">
+
   <div id="signin" class="modal">
     <div class="modal-content">
-      {{> atForm state=''}}
+      {{> atForm state='signIn'}}
     </div>
   </div>
 
@@ -10,4 +11,5 @@
       {{> atForm state='signUp'}}
     </div>
   </div>
+  
 </template>
