--- a/client/templates/includes/signup/signupbtn.html
+++ b/client/templates/includes/signup/signupbtn.html
@@ -1,18 +1,18 @@
 <template name="signUpButton">
   <div class="btn amber darken-3 waves-effect waves-light">
-    <a class="modal-trigger" href="#signup">Sign Up</a>
+    <a href="{{pathFor 'signUp'}}">Sign Up</a>
   </div>
 </template>
 
 <template name="navSignUp">
   <!-- Modal Trigger -->
-  <a class="modal-trigger" href="#signup">Sign Up</a>
+  <a class="waves-effect waves-light" href="{{pathFor 'signUp'}}">Sign Up</a>
 </template>
 
 <template name="signInButton">
   {{#if currentUser}}
-  <a class="logout waves-effect waves-light">Sign Out</a>
+  <a class="logout waves-effect waves-light">Logout</a>
   {{else}}
-  <a class="modal-trigger waves-effect waves-light" href="#signin">Sign In</a>
+  <a class="waves-effect waves-light" href="{{pathFor 'signIn'}}">Login</a>
   {{/if}}
 </template>
