--- a/client/templates/includes/landing/landing_out.html
+++ b/client/templates/includes/landing/landing_out.html
@@ -7,7 +7,7 @@
           <div class="caption left-align">
             <h3>LEARN WHAT YOU WANT</h3>
             <h5 class="light grey-text text-lighten-3">From someone in your community</h5>
-              
+
           </div>
         </li>
         <li>
@@ -15,7 +15,7 @@
           <div class="caption left-align">
             <h3 class="grey-text text-text-darken-5">PICK UP A NEW SKILLs</h3>
             <h5 class="light grey-text text-darken-5">Develop skills that you are interested</h5>
-             
+
           </div>
         </li>
         <li>
@@ -23,7 +23,7 @@
           <div class="caption left-align">
             <h3>KNOWLEDGE ON DEMAND</h3>
             <h5 class="light grey-text text-lighten-3">Learn around your schedule</h5>
-              
+
           </div>
         </li>
         <li>
@@ -31,7 +31,7 @@
           <div class="caption left-align">
             <h3>IT'S NEVER TOO LATE OR EARLY</h3>
             <h5 class="light grey-text text-lighten-3">Classes for everyone at any skill level at any age</h5>
-              
+
           </div>
         </li>
       </ul>
@@ -42,21 +42,19 @@
       <div class="col m6">
         <h4 class="center-align">Learn Something</h4>
         <p>
-          Looking for a new skill? Trying to find a new hobby? Want to learn how to how to play the guitar or to paint pottery? Search local classes, find a new hobby! 
+          Looking for a new skill? Trying to find a new hobby? Want to learn how to how to play the guitar or to paint pottery? Search local classes, find a new hobby!
         </p>
         <p>
           We have classes for everyone! Learning should never stop, whether you are a teen looking for cooking classes or an adult trying to learn crochet, we've got the intructors for you!
         </p>
-          
-      </div>
-       <div class="col m6">
         <h4 class="center-align">Teach Something</h4>
           <p>
             Great at painting? Have a knack for needle-point? Are you an expert at pottery? Great! Start a class now, teach people how to master your favorite hobby and make a little money!
           </p>
-        <div class="right-align">
-          
-        </div>
+      </div>
+
+       <div class="col m6">
+       {{> atForm state="signUp"}}
       </div>
     </div>
   </div>
