--- a/client/templates/includes/landing/landing_out.html
+++ b/client/templates/includes/landing/landing_out.html
@@ -49,7 +49,7 @@
         </p>
         <h4 class="center-align">Teach Something</h4>
           <p>
-            Great at painting? Have a knack for needle-point? Are you an expert at pottery? Great! Start a class now, teach people how to master your favorite hobby and make a little money!
+            Great at painting? Have a knack for needle-point? Are you an expert at pottery? Great! Start a class now, teach people how to master your favorite hobby and start making money doing what you like!
           </p>
       </div>
 
