--- a/client/templates/posts/post_form.html
+++ b/client/templates/posts/post_form.html
@@ -73,6 +73,7 @@
             <div class="input-field col s3">
               <label for="state">State</label>
               <select name="state" id="state" type="text">
+                <option value="--">Select State</option>
               	<option value="AL">Alabama</option>
               	<option value="AK">Alaska</option>
               	<option value="AZ">Arizona</option>
