--- a/client/templates/posts/post_form.html
+++ b/client/templates/posts/post_form.html
@@ -7,11 +7,11 @@
           <div class="collapsible-body">
             <div class="row">
               <div class="input-field col s12 m6">
-                  <label for="title" data-error="wrong" class="active">Title</label>
+                  <label for="title"  class="active">Title</label>
                   <input name="title" id="title" type="text" class="validate">
               </div>
               <div class="input-field col s12 m6">
-                  <label for="price" data-error="wrong" class="active">Price</label>
+                  <label for="price"  class="active">Price</label>
                   <input name="price" id="price" type="text" class="validate">
               </div>
             </div>
@@ -149,11 +149,11 @@
 <!--          <div class="collapsible-body">-->
 <!--            <div class="row">-->
 <!--              <div class="input-field col m6">-->
-<!--                  <label for="title" data-error="wrong">Title</label>-->
+<!--                  <label for="title" >Title</label>-->
 <!--                  <input name="title" id="title" type="text" class="validate">-->
 <!--              </div>-->
 <!--              <div class="input-field col m6">-->
-<!--                  <label for="price" data-error="wrong">Price</label>-->
+<!--                  <label for="price" >Price</label>-->
 <!--                  <input name="price" id="price" type="text" class="validate">-->
 <!--              </div>-->
 <!--            </div>-->
@@ -188,7 +188,7 @@
     <!--                <form>-->
     <!--                    <div class="row">-->
     <!--                        <div class="input-field col s12">-->
-    <!--                            <label for="title" data-error="wrong">Title</label>-->
+    <!--                            <label for="title" >Title</label>-->
     <!--                            <input name="title" id="title" type="text" class="validate">-->
     <!--                        </div>-->
     <!--                    </div>-->
