--- a/client/templates/posts/post_item.html
+++ b/client/templates/posts/post_item.html
@@ -1,13 +1,13 @@
 <template name="postItem">
 	<div class="center-align">
 		<a href="{{pathFor 'postPage'}}" class="card-title  grey-text text-darken-4">
-	    {{title}} <small>{{zip}}</small>
+	    {{title}} <small>{{city}}</small>
 		</a>
 	</div>
 	<div class="card-content">
 		<div>{{startDate}} - {{endDate}}</div>
-		<!--<div>{{startTime}} - {{endTime}}</div>-->
-		<div>instructed by {{author}}</div>
+		<div>{{startTime}} - {{endTime}}</div>
+		<!--<div>instructed by {{author}}</div>-->
 		<p>{{description}}</p>
 		<!--<p>{{address1}}</p>-->
 		<!--<p>{{address2}}</p>-->
